tests/pass/0011_print_multiple_addition.ee
fn main() {
    debugPrint(1+2+3+4);
}