tests/fail/0002_bool_arithmetic.ee
fn main() {
    debugPrint(true + 1);
}
